--- a/nb9_sportsBERT_validator.ipynb
+++ b/nb9_sportsBERT_validator.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -28,7 +28,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CUDA available: True\n"
+            "CUDA available: False\n"
           ]
         }
       ],
@@ -4307,11 +4307,21 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "wsc_venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.6"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
