Update nb9_sportsBERT_validator notebook

--- a/nb9_sportsBERT_validator.ipynb
+++ b/nb9_sportsBERT_validator.ipynb
@@ -63,6 +63,33 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (2235484513.py, line 1)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    jq 'del(.metadata.widgets)' notebook.ipynb > notebook_fixed.ipynb && mv notebook_fixed.ipynb notebook.ipynb\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
+      "source": [
+        "import nbformat as nbf, sys\n",
+        "path = sys.argv[1]\n",
+        "nb = nbf.read(path, as_version=nbf.NO_CONVERT)\n",
+        "nb.metadata.pop(\"widgets\", None)  # drop broken widgets metadata\n",
+        "for c in nb.cells:  # optional: drop widget views in outputs so GitHub doesn't choke\n",
+        "    if \"outputs\" in c:\n",
+        "        for o in c[\"outputs\"]:\n",
+        "            if isinstance(o, dict) and \"data\" in o:\n",
+        "                o[\"data\"].pop(\"application/vnd.jupyter.widget-view+json\", None)\n",
+        "nbf.write(nb, path)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "-WR7eAelaknd"
